--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,10 @@ jobs:
         name: Flake8
         runs-on: ubuntu-latest
         steps:
-        - uses: actions/checkout@v3
-        - uses: actions/setup-python@v4
+        - uses: actions/checkout@v4
+        - uses: actions/setup-python@v5
           with:
-            python-version: '3.13'
+            python-version: '3.14'
         - name: Flake8
           run:  python3 -m pip install .[dev] && flake8 --exclude examples
 
@@ -21,10 +21,10 @@ jobs:
         name: Flake8 on Generated Code
         runs-on: ubuntu-latest
         steps:
-        - uses: actions/checkout@v3
-        - uses: actions/setup-python@v4
+        - uses: actions/checkout@v4
+        - uses: actions/setup-python@v5
           with:
-            python-version: '3.13'
+            python-version: '3.14'
         - name: Flake8
           run: |
             python3 -m pip install .[dev]
@@ -37,20 +37,22 @@ jobs:
             python3 -m flake8 --extend-ignore E501,Q000 test/mechs
 
     pytest:
-        name: Pytest Conda Py${{ matrix.python_version }}
+        name: Pytest Conda Py${{ matrix.python-version }}
         strategy:
             matrix:
-                python_version: ["3.9", "3.11"]
+                python-version: ["3.12", "3.13", "3.14"]
         runs-on: ubuntu-latest
         env:
-            PYTHON_VERSION: ${{ matrix.python_version }}
+            PYTHON_VERSION: ${{ matrix.python-version }}
         steps:
-        - uses: actions/checkout@v3
-        - uses: actions/setup-python@v4
+        - uses: actions/checkout@v4
+        - uses: actions/setup-python@v5
           with:
-            python-version: ${{ matrix.python_version }}
+            python-version: ${{ matrix.python-version }}
         -   name: "PyTest"
             run: |
+                python3 -m pip install --upgrade pip
+                python3 -m pip install "setuptools>=70" ".[dev]"
                 python3 -m pip install .[test]
                 cmake -S test -B build -Dpybind11_DIR=`python3 -m pybind11 --cmakedir`
                 cmake --build build --parallel $(nproc)
@@ -60,10 +62,10 @@ jobs:
         name: Documentation
         runs-on: ubuntu-latest
         steps:
-        - uses: actions/checkout@v3
-        - uses: actions/setup-python@v4
+        - uses: actions/checkout@v4
+        - uses: actions/setup-python@v5
           with:
-            python-version: '3.13'
+            python-version: '3.14'
         - name: 'Build Docs'
           run: |
             python3 -m pip install -e .[docs]
